The values of investment works

--- a/app/app/src/main/res/layout/fragment_invest_details.xml
+++ b/app/app/src/main/res/layout/fragment_invest_details.xml
@@ -30,67 +30,52 @@
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.1"
+                app:layout_constraintHeight_percent="0.08"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_percent="0.8" />
 
             <TextView
-                android:id="@+id/txt_invest_amount"
-                android:layout_width="0dp"
+                android:id="@+id/txt_max_invest_amount"
+                android:layout_width="165dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="32dp"
-                android:text="Máximo a invertir:"
-                android:textAlignment="viewEnd"
+                android:layout_marginTop="50dp"
+                android:text="Máxima inversión:"
+                android:textAlignment="viewStart"
                 android:textColor="@color/textPrimary"
                 android:textStyle="bold"
                 app:autoSizeTextType="uniform"
-                app:layout_constraintEnd_toStartOf="@+id/txt_value_invest_amount"
-                app:layout_constraintHeight_percent="0.05"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHeight_percent="0.04"
+                app:layout_constraintStart_toStartOf="@+id/txt_invest_details"
                 app:layout_constraintTop_toBottomOf="@+id/txt_title_invest_f2"
                 app:layout_constraintWidth_percent="0.5" />
 
             <TextView
-                android:id="@+id/txt_value_invest_amount"
+                android:id="@+id/txt_value_max_invest_amount"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="32dp"
-                android:text="0'000.000 $"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="50dp"
+                android:text="$0,000,000"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.05"
-                app:layout_constraintStart_toEndOf="@+id/txt_invest_amount"
+                app:layout_constraintHeight_percent="0.04"
+                app:layout_constraintStart_toEndOf="@+id/txt_max_invest_amount"
                 app:layout_constraintTop_toBottomOf="@+id/txt_title_invest_f2"
-                app:layout_constraintWidth_percent="0.3" />
+                app:layout_constraintWidth_percent="0.4" />
 
             <EditText
                 android:id="@+id/edit_invest_amount"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="30dp"
-                android:ems="10"
-                android:hint="¿Cuánto quiere invertir?"
+                android:layout_marginTop="45dp"
                 android:inputType="number"
                 android:textAlignment="center"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.08"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_invest_amount"
-                app:layout_constraintWidth_percent="0.6" />
-
-            <Spinner
-                android:id="@+id/spin_time_to_return"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="24dp"
-                android:entries="@array/time_to_return"
-                android:textAlignment="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.08"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edit_invest_amount"
+                app:layout_constraintTop_toBottomOf="@+id/txt_max_invest_amount"
                 app:layout_constraintWidth_percent="0.6" />
 
             <TextView
@@ -98,14 +83,28 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="45dp"
                 android:text="Detalles del préstamo"
                 android:textColor="@color/textPrimary"
                 android:textStyle="bold"
                 app:autoSizeTextType="uniform"
-                app:layout_constraintHeight_percent="0.06"
+                app:layout_constraintHeight_percent="0.04"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spin_time_to_return"
+                app:layout_constraintTop_toBottomOf="@+id/txt_invest_amount"
+                app:layout_constraintWidth_percent="0.6" />
+
+            <TextView
+                android:id="@+id/txt_invest_amount"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:text="Cantidad a invertir"
+                android:textAlignment="center"
+                android:textColor="@color/textPrimary"
+                app:autoSizeTextType="uniform"
+                app:layout_constraintEnd_toEndOf="@+id/edit_invest_amount"
+                app:layout_constraintHeight_percent="0.03"
+                app:layout_constraintStart_toStartOf="@+id/edit_invest_amount"
+                app:layout_constraintTop_toBottomOf="@+id/edit_invest_amount"
                 app:layout_constraintWidth_percent="0.6" />
 
             <TextView
@@ -119,7 +118,6 @@
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/txt_value_time_to_return"
                 app:layout_constraintHeight_percent="0.035"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_invest_details"
                 app:layout_constraintWidth_percent="0.4" />
@@ -135,7 +133,6 @@
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.035"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/txt_time_to_return"
                 app:layout_constraintTop_toBottomOf="@+id/txt_invest_details"
                 app:layout_constraintWidth_percent="0.4" />
@@ -159,7 +156,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
-                android:text="00.000 $"
+                android:text="$00,000"
                 android:textAlignment="viewStart"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
@@ -187,7 +184,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
-                android:text="000.000 $"
+                android:text="$000,000"
                 android:textAlignment="viewStart"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
@@ -215,7 +212,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
-                android:text="000.000 $"
+                android:text="$000,000"
                 android:textAlignment="viewStart"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
@@ -243,7 +240,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
-                android:text="0'000.000 $"
+                android:text="$0,000,000"
                 android:textAlignment="viewStart"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
@@ -256,7 +253,7 @@
                 android:id="@+id/btn_let_invest"
                 android:layout_width="206dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="68dp"
                 android:background="@drawable/btn_background_white"
                 android:text="Invertir"
                 android:textColor="@color/textPrimary"
