--- a/app/app/src/main/res/layout/fragment_invest_options.xml
+++ b/app/app/src/main/res/layout/fragment_invest_options.xml
@@ -42,6 +42,7 @@
                 android:layout_marginTop="32dp"
                 android:background="@drawable/investment_cards"
                 android:elevation="20dp"
+                android:visibility="invisible"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.2"
@@ -167,6 +168,7 @@
                 android:background="@drawable/investment_cards"
                 android:elevation="20dp"
                 app:autoSizeTextType="uniform"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -290,6 +292,7 @@
                 android:layout_marginTop="32dp"
                 android:background="@drawable/investment_cards"
                 android:elevation="20dp"
+                android:visibility="invisible"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.2"
