Load all investments of an investor

--- a/app/app/src/main/res/layout/fragment_main_investor.xml
+++ b/app/app/src/main/res/layout/fragment_main_investor.xml
@@ -54,6 +54,7 @@
                 android:layout_marginTop="32dp"
                 android:text="@string/balance"
                 android:textColor="@color/textPrimary"
+                android:visibility="invisible"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintHeight_percent="0.06"
                 app:layout_constraintStart_toStartOf="@+id/bar_progress_moto_bar"
@@ -69,6 +70,7 @@
                 android:textAlignment="viewEnd"
                 android:textColor="@color/textPrimary"
                 android:textStyle="bold"
+                android:visibility="invisible"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toTopOf="@+id/txt_value_return_amount"
                 app:layout_constraintEnd_toEndOf="@+id/txt_value_return_amount"
@@ -83,6 +85,7 @@
                 android:textAlignment="viewEnd"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toTopOf="@+id/bar_progress_moto_bar"
                 app:layout_constraintEnd_toEndOf="@+id/bar_progress_moto_bar"
                 app:layout_constraintHeight_percent="0.03"
@@ -98,6 +101,7 @@
                 android:progressBackgroundTint="#000000"
                 android:progressTint="@color/loanppi"
                 android:thumb="@drawable/moto1"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.09"
                 app:layout_constraintStart_toStartOf="parent"
@@ -124,6 +128,7 @@
                     android:text="0'000.000"
                     android:textColor="@color/textPrimary"
                     app:autoSizeTextType="uniform"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHeight_percent="1"
@@ -143,19 +148,19 @@
                 android:text="@string/invest"
                 android:onClick="onInvest"
                 android:textColor="@color/textPrimary"
-                app:layout_constraintEnd_toStartOf="@+id/btn_my_investment"
+                app:layout_constraintEnd_toStartOf="@+id/btn_my_investments"
                 app:layout_constraintHeight_percent="0.15"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/container_amount_returned"
                 app:layout_constraintWidth_percent="0.4" />
 
             <Button
-                android:id="@+id/btn_my_investment"
+                android:id="@+id/btn_my_investments"
                 android:layout_width="165dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="60dp"
                 android:background="@drawable/btn_dashboard"
-                android:text="@string/my_investment"
+                android:text="@string/my_investments"
                 android:onClick="onMyInvestment"
                 android:textColor="@color/textPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +178,7 @@
                 android:enabled="false"
                 android:text="@string/history"
                 android:textColor="@color/textPrimary"
-                app:layout_constraintEnd_toEndOf="@+id/btn_my_investment"
+                app:layout_constraintEnd_toEndOf="@+id/btn_my_investments"
                 app:layout_constraintHeight_percent="0.15"
                 app:layout_constraintStart_toStartOf="@+id/btn_invest"
                 app:layout_constraintTop_toBottomOf="@+id/btn_invest"
