--- a/app/app/src/main/res/menu/menu_investor.xml
+++ b/app/app/src/main/res/menu/menu_investor.xml
@@ -8,7 +8,7 @@
     <item android:id="@+id/menu_i_invest"
         android:title="@string/invest" />
     <item android:id="@+id/menu_i_my_investment"
-        android:title="@string/my_investment" />
+        android:title="@string/my_investments" />
     <item android:id="@+id/menu_i_history"
         android:title="@string/history" />
     <item android:id="@+id/menu_signout"
