Update UI of signup

--- a/app/app/src/main/res/drawable/btn_background_white.xml
+++ b/app/app/src/main/res/drawable/btn_background_white.xml
@@ -4,5 +4,5 @@
     <stroke
         android:width="3dp"
         android:color="@color/btn_orange"/>
-    <solid android:color="@color/btn_white"/>
+    <solid android:color="@color/white"/>
 </shape>
