--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -12,11 +12,12 @@
     <color name="textPrimary">#1E0400</color>
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="facebook">#3B5998</color>
+    <color name="google">#DB4437</color>
 
     // Buttons
     <color name="btn_white">#BCFFFFFF</color>
     <color name="btn_orange">#FFFF441F</color>
-    <color name="btn_facebook">#3B5998</color>
-    <color name="btn_google">#DB4437</color>
     <color name="btn_dashboard">#B5BCBCBC</color>
+
 </resources>
