--- a/app/app/src/main/res/layout/activity_signup.xml
+++ b/app/app/src/main/res/layout/activity_signup.xml
@@ -160,7 +160,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
-                android:background="@drawable/btn_facebook"
+                android:background="@drawable/btn_white_no_border"
                 android:drawableStart="@drawable/com_facebook_favicon_blue"
                 android:paddingStart="20dp"
                 android:singleLine="false"
@@ -179,7 +179,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
-                android:background="@drawable/btn_google"
+                android:background="@drawable/btn_white_no_border"
                 android:drawableStart="@drawable/googleg_standard_color_18"
                 android:paddingStart="20dp"
                 android:text="@string/btn_google"
