--- a/app/app/src/main/res/layout/dialog_login.xml
+++ b/app/app/src/main/res/layout/dialog_login.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:paddingTop="40dp"
-    android:paddingBottom="40dp">
+    android:paddingBottom="30dp">
 
     <TextView
         android:id="@+id/txt_login_title"
@@ -29,12 +28,14 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:background="@drawable/btn_facebook"
-        android:singleLine="false"
+        android:background="@drawable/btn_white_no_border"
+        android:drawableStart="@drawable/com_facebook_favicon_blue"
+        android:paddingStart="20dp"
         android:text="@string/btn_facebook"
+        android:textColor="@color/facebook"
         android:textSize="@dimen/btn_text_size"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.25"
+        app:layout_constraintHeight_percent="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_login_title"
         app:layout_constraintWidth_percent="0.55" />
@@ -45,13 +46,36 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
-        android:background="@drawable/btn_google"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/btn_white_no_border"
+        android:drawableStart="@drawable/googleg_standard_color_18"
+        android:paddingStart="20dp"
         android:text="@string/btn_google"
+        android:textColor="@color/google"
         android:textSize="@dimen/btn_text_size"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.25"
+        app:layout_constraintHeight_percent="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_l_facebook"
         app:layout_constraintWidth_percent="0.55" />
+
+    <!--<Button
+        android:id="@+id/btn_l_google"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/btn_white_no_border"
+        android:drawableStart="@drawable/googleg_standard_color_18"
+        android:paddingStart="20dp"
+        android:text="@string/btn_google"
+        android:textColor="@color/google"
+        android:textSize="@dimen/btn_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_l_facebook"
+        app:layout_constraintWidth_percent="0.55" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
